updated background code for easier implementation
